--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,8 @@ dependencies {
     implementation 'androidx.compose.material:material-icons-extended:1.3.1'
     implementation 'androidx.navigation:navigation-compose:2.5.3'
 
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.7.2'
+
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.moshi:moshi-kotlin:1.9.3'
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
